<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_fragment"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_auth"
            android:hint="@string/input_login"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_auth"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:textSize="18sp"
            android:layout_below="@id/login_auth"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_auth"
            android:id="@+id/login_button"
            android:text="@string/login_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/not_login_to_registration"
            android:layout_margin="32dp"
            android:id="@+id/not_login_to_registration"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_fragment"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:visibility="gone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_registration_input"
            android:hint="@string/input_name"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_family_registration"
            android:hint="@string/input_family_name"
            android:textSize="18sp"
            android:layout_below="@id/user_name_registration_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_registration"
            android:hint="@string/input_login"
            android:textSize="18sp"
            android:layout_below="@id/user_family_registration"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_registration"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:layout_below="@id/login_registration"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_save_btn"
            android:text="@string/registration_btn"
            android:layout_below="@+id/password_registration"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/login_btn"
            android:layout_margin="32dp"
            android:id="@+id/not_registration_to_login" />

    </RelativeLayout>






</RelativeLayout>