<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="16dp"    >

    <TimePicker
        android:id="@+id/walk_fragment_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:timePickerMode="spinner"/>

    <TextView
        android:id="@+id/time_for_walk_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_for_walk_txt"
        android:textSize="16sp"
        android:layout_below="@+id/walk_fragment_time"/>

    <EditText
        android:id="@+id/time_for_walk_input"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/time_for_walk_txt"/>

    <TextView
        android:id="@+id/time_for_walk_txt_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_for_walk_txt"
        android:layout_toRightOf="@+id/time_for_walk_input"
        android:text="@string/minutes_txt"
        android:layout_marginTop="32dp"
        />

    <Spinner
        android:id="@+id/walk_fragment_list_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_for_walk_txt_minutes"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/walk_fragment_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_txt"
        android:layout_below="@+id/walk_fragment_list_period"
        android:layout_marginTop="16dp"/>

</RelativeLayout>